--- a/app/views/welcome/hello.html.erb
+++ b/app/views/welcome/hello.html.erb
@@ -62,10 +62,10 @@
       </div>
     </div>
 
-  	</div>
+  	<!--Container-->
   	<div class="container theme-showcase" role="main">
 	  	<div class="jumbotron">
-			<h1> We are currently under construction!</h1>
+			<h1> <%= @name %>, we are currently under construction!</h1>
 
 	 		<p>Check out our <a href="/users">users</a></p>
 
