Added signup route and layouts

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,16 @@
 <h1>Editing user</h1>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="col-md-5">
+  </div>
+  <div class="col-md-2">
+  	<%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+	<%= link_to 'Show', @user %> |
+	<%= link_to 'Back', users_path %>
+  </div>
+  <div class="col-md-5">
+  </div>
+</div>
+
+
