--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
-<h1>Listing users</h1>
-
-<table>
+<%= render 'layouts/bootstrap' %>
+<h1>Listing Users</h1>
+<div class="row">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-8"><table>
   <thead>
     <tr>
       <th>Name</th>
@@ -26,10 +29,17 @@
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+
     <% end %>
   </tbody>
 </table>
+<%= link_to 'New User', new_user_path %>
+  </div>
+  <div class="col-md-2">
+  </div>
+</div>
+
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+
