--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New user</h1>
+<h1>Sign up</h1>
+	<div class="row">
+	  <div class="col-md-5">
+	  </div>
+	  <div class="col-md-2">
+	  	<%= render 'form' %>
+	  	<%= link_to 'Back', users_path %>
+	  </div>
+	  <div class="col-md-5">
+	  </div>
+	</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
