--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,45 @@
-<p id="notice"><%= notice %></p>
+<%= render 'layouts/bootstrap' %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.Name %>
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-6 col-sm-4">
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.Email %>
-</p>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+      <p id="notice"><%= notice %></p>
+      <p>
+        <strong>Name:</strong>
+        <%= @user.Name %>
+      </p>
+      <p>
+        <strong>Email:</strong>
+        <%= @user.Email %>
+      </p>
 
-<p>
-  <strong>Dateofbirth:</strong>
-  <%= @user.DateOfBirth %>
-</p>
+      <p>
+        <strong>Dateofbirth:</strong>
+        <%= @user.DateOfBirth %>
+      </p>
 
-<p>
-  <strong>Bio:</strong>
-  <%= @user.Bio %>
-</p>
+      <p>
+        <strong>Bio:</strong>
+        <%= @user.Bio %>
+      </p>
 
-<p>
-  <strong>Age:</strong>
-  <%= @user.Age %>
-</p>
+      <p>
+        <strong>Age:</strong>
+        <%= @user.Age %>
+      </p>
+      <%= link_to 'Edit', edit_user_path(@user) %> |
+      <%= link_to 'Back', users_path %>
+    </div>
+    <!-- Optional: clear the XS cols if their content doesn't match in height -->
+    <div class="clearfix visible-xs">
+    </div>
+    <div class="col-xs-6 col-sm-4">
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+
+
