--- a/app/views/welcome/hello.html.erb
+++ b/app/views/welcome/hello.html.erb
@@ -36,7 +36,7 @@
 	  	<div class="jumbotron">
 			<h1> <%= @name %>, we are currently under construction!</h1>
 
-	 		<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+	 		<%= link_to "Sign up", signup_path, class: "btn btn-large btn-primary" %>
 	 		<br />
 			<%= shorten_paragraph @introduction %>
 		</div>
