--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -20,9 +20,7 @@ pre {
 
 a {
   color: #000;
-  &:visited {
-    color: #666;
-  }
+  &:visited 
   &:hover {
     color: #fff;
     background-color: #000;
