--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,24 +12,24 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :Name %><br>
-    <%= f.text_field :Name %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :Email %><br>
-    <%= f.text_field :Email %>
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :DateOfBirth %><br>
-    <%= f.text_field :DateOfBirth %>
+    <%= f.label :dob %><br>
+    <%= f.text_field :dob %>
   </div>
   <div class="field">
-    <%= f.label :Bio %><br>
-    <%= f.text_field :Bio %>
+    <%= f.label :bio %><br>
+    <%= f.text_field :bio %>
   </div>
   <div class="field">
-    <%= f.label :Age %><br>
-    <%= f.number_field :Age %>
+    <%= f.label :age %><br>
+    <%= f.number_field :age %>
   </div>
   <div class="actions">
     <%= f.submit %>
