--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'layouts/bootstrap' %>
+
 <h1>Listing Users</h1>
 <div class="row">
   <div class="col-md-2">
@@ -6,11 +6,11 @@
   <div class="col-md-8"><table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Dateofbirth</th>
-      <th>Bio</th>
-      <th>Age</th>
+      <th>name</th>
+      <th>email</th>
+      <th>dob</th>
+      <th>bio</th>
+      <th>age</th>
       <th></th>
       <th></th>
       <th></th>
@@ -20,11 +20,11 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.Name %></td>
-        <td><%= user.Email %></td>
-        <td><%= user.DateOfBirth %></td>
-        <td><%= user.Bio %></td>
-        <td><%= user.Age %></td>
+        <td><%= user.name %></td>
+        <td><%= user.email %></td>
+        <td><%= user.dob %></td>
+        <td><%= user.bio %></td>
+        <td><%= user.age %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
