--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,29 @@
+<% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 	<div class="row">
-	  <div class="col-md-5">
+	  <div class="col-md-3">
 	  </div>
-	  <div class="col-md-2">
-	  	<%= render 'form' %>
+	  <div class="col-md-6">
+	  	<%= form_for(@user) do |f| %>
+	  		<%= render 'shared/error_messages' %>
+
+	  		<%= f.label :name %>
+	  		<%= f.text_field :name %>
+
+	  		<%= f.label :email %>
+	  		<%= f.text_field :email %>
+	  		
+	  		<%= f.label :password %>
+	  		<%= f.text_field :password %>
+
+	  		<%= f.label :password_confirmation, "Confirmation" %>
+	  		<%= f.text_field :password_confirmation %>
+	  	
+	  		<%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+	  	<% end %>
 	  	<%= link_to 'Back', users_path %>
 	  </div>
-	  <div class="col-md-5">
+	  <div class="col-md-3">
 	  </div>
 	</div>
 
