--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,16 +8,15 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
- *= require_tree .
  */
-/* Space out content a bit */
-*= require bootstrap
+
+ 
+/* Space out content a bit 
+*= require bootstrap 
 *= require jumbotron_narrow
 *= require_tree .
 *= require_self
-
- */
+*/
 
 @font-face {
   font-family: 'Glyphicons Halflings';
