--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,45 +1,12 @@
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
 
-<h1>Listing Users</h1>
-<div class="row">
-  <div class="col-md-2">
-  </div>
-  <div class="col-md-8"><table>
-  <thead>
-    <tr>
-      <th>name</th>
-      <th>email</th>
-      <th>dob</th>
-      <th>bio</th>
-      <th>age</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<%= will_paginate %>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.dob %></td>
-        <td><%= user.bio %></td>
-        <td><%= user.age %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<ul class="users">
+  <% @users.each do |user| %>
+    <%= render user %>
+  <% end %>
+</ul>
 
-    <% end %>
-  </tbody>
-</table>
-<%= link_to 'New User', new_user_path %>
-  </div>
-  <div class="col-md-2">
-  </div>
-</div>
-
-
-<br>
-
-
+<%= will_paginate %>
