--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,48 +10,14 @@
       </h1>
     </section>
   </aside>
-</div>
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-6 col-sm-4">
-
-    </div>
-    <div class="col-xs-6 col-sm-4">
-      <p id="notice"><%= notice %></p>
-      <p>
-        <strong>Name:</strong>
-        <%= @user.name %>
-      </p>
-      <p>
-        <strong>Email:</strong>
-        <%= @user.email %>
-      </p>
-
-      <p>
-        <strong>Dateofbirth:</strong>
-        <%= @user.dob %>
-      </p>
-
-      <p>
-        <strong>Bio:</strong>
-        <%= @user.bio %>
-      </p>
-
-      <p>
-        <strong>Age:</strong>
-        <%= @user.age %>
-      </p>
-      <%= link_to 'Edit', edit_user_path(@user) %> |
-      <%= link_to 'Back', users_path %>
-    </div>
-    <!-- Optional: clear the XS cols if their content doesn't match in height -->
-    <div class="clearfix visible-xs">
-    </div>
-    <div class="col-xs-6 col-sm-4">
-    </div>
+  <div class="span8">
+    <% if @user.microposts.any? %>
+      <h3> Microposts (<%= @user.microposts.count %>) </h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% end %>
   </div>
 </div>
-
-
 
