--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,7 @@
 
 /* mixins, variables, etc*/
 $grayMediumLight: #eaeaea;
+$blue: #00B2EE;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -95,6 +96,33 @@ aside {
       margin-top: 0px;
     }
   }
+.stats {
+  overflow: auto;
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid $grayMediumLight;
+    color: gray;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: $blue;
+    }
+  }
+  strong {
+    display: block;
+  }
+}
+
+.user_avatars {
+  overflow: auto;
+  margin-top: 10px;
+  .gravatar {
+    margin: 1px 1px;
+  }
 }
 
 .gravatar {
@@ -154,19 +182,20 @@ input {
     border-top: 1px solid #e8e8e8;
   }
 }
-.content {
-  display: block;
-}
-.timestamp {
-  color: $grayMediumLight;
-}
-.gravatar {
-  float: left;
-  margin-right: 10px;
-}
-aside {
-  textarea {
-    height: 100px;
-    margin-bottom: 5px;
+  .content {
+    display: block;
+  }
+  .timestamp {
+    color: $grayMediumLight;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+  }
+  aside {
+    textarea {
+      height: 100px;
+      margin-bottom: 5px;
+    }
   }
 }
