--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="span4">
@@ -9,10 +7,14 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+      <%= render 'shared/stats' %>
+    </section>
   </aside>
   <div class="span8">
+    <%= render 'follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
-      <h3> Microposts (<%= @user.microposts.count %>) </h3>
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
         <%= render @microposts %>
       </ol>
@@ -20,4 +22,3 @@
     <% end %>
   </div>
 </div>
-
