--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -3,13 +3,17 @@
 	  <span class="user">
 	    <%= link_to feed_item.user.name, feed_item.user %>
 	  </span>
-	  <span class="content"><%= feed_item.content %></span>
+	  <span class="content"><%= feed_item.content %>
+    <% if feed_item.photo %>
+      <%= cl_image_tag(feed_item.photo.path, { size: '125x125', crop: :fit }) %>
+    <% else %>
+      No Photo!
+    <% end %></span>
 	  <span class="timestamp">
 	    Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
 	  </span>
   <% if current_user?(feed_item.user) %>
   	  <%= link_to "delete", feed_item, method: :delete,
-  	  								   data: { confirm: "You sure?" }, 
+  	  								   data: { confirm: "You sure?" },
   	  								   title: feed_item.content %>
   <% end %>
-</li>
